Tue Feb  1 14:46:43 CET 2000  Sven Neumann <sven@gimp.org>

	* app/gimpdrawable.c: check that the passed pointer is indeed a
	drawable in a few more places

	* plug-ins/common/header.c
	* plug-ins/common/url.c
	* plug-ins/gdyntext/gdyntext_ui.c
	* plug-ins/script-fu/regex.c: i18n

	* po-plug-ins/POTFILES.in: only list files that really do contain
	translatable messages

2000-02-01  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpwidgets.[ch]: merged the table attach helper
	functions into one function.

	* app/*
	* plug-ins/*: changed the calls to gimp_table_attach_aligned()
	accordingly. Did minimal ui updates (spacing and stuff) in some
	files.

Mon Jan 31 23:24:44 CET 2000  Marc Lehmann <pcg@goof.com>

	* MapObject/mapobject_main.c: add missing N_.
        * common/color_enhance.c: fix PDB-name.
        * common/curve_bend.c: fix typoe.

        * plug-ins/AlienMap/AlienMap.c, plug-ins/gflare/gflare.c,
        * plug-ins/AlienMap2/AlienMap2.c,
        * plug-ins/FractalExplorer/FractalExplorer.c,
        * plug-ins/plug-ins/Lighting/lighting_main.c, bmp/bmp.c,
        * plug-ins/plug-ins/borderaverage/borderaverage.c,
        * plug-ins/common/CEL.c, plug-ins/common/aa.c,
        * plug-ins/common/animationplay.c, common/animoptimize.c,
        * plug-ins/plug-ins/common/apply_lens.c, common/autocrop.c,
        * plug-ins/common/autostretch_hsv.c, plug-ins/common/blinds.c,
        * plug-ins/common/c_astretch.c, common/checkerboard.c,
        * plug-ins/plug-ins/common/colorify.c, common/compose.c,
        * plug-ins/common/convmatrix.c, plug-ins/common/cubism.c,
        * plug-ins/common/decompose.c, common/deinterlace.c,
        * plug-ins/plug-ins/common/diffraction.c, common/displace.c,
        * plug-ins/common/edge.c, plug-ins/common/emboss.c,
        * plug-ins/common/engrave.c, common/exchange.c,
        * plug-ins/plug-ins/common/film.c, common/flarefx.c,
        * plug-ins/common/gauss_iir.c, plug-ins/common/gauss_rle.c,